frontend/src/index.css
/* ... */
  ul .nav .sort li{
    /*color: rgba(0,96,15,.63);*/
    /*color: rgba(196,62,0, 1);*/
    color: rgba(255, 64, 0, 1);
    /*font-weight: bold;*/
    cursor: pointer;
  }

  header .nav a{
    /*color: rgba(0,96,15,.63);*/
    /*color: rgba(196,62,0, 1);*/
    color: rgba(196,62,0, 1);
    font-weight: bold;
    cursor: pointer;
  }

  header .nav .no-link, header .no-link {
    cursor: text;
    /*color: #6abf69;*/
    /*color: rgba(0,96,15,.63);*/
    color: rgba(255,255,255,.63);
  }

  .nav .selected, .nav .sort .selected, .nav .category .selected {
    /*color: red;*/
    /*color: rgba(0,96,15, 1);*/
    color: rgba(56,142,60, 1);
    cursor: default;
    /*font-weight: bold;*/
  }
  header .nav .selected, header .nav .sort .selected, header .nav .category .selected {
    color: rgba(0,96,15,.63);
    /*color: rgba(196,62,0, 1);*/
    /*color: rgba(255, 0, 0, .65);*/
    cursor: default;
    /*text-shadow: -1px 0 rgba(163, 0, 0, .1), 0 1px rgba(163, 0, 0, .1), 1px 0 rgba(163, 0, 0, .1), 0 -1px rgba(163, 0, 0, .1);*/
    font-weight: bold;
}

  button {
    color: white;
    background-color: green;
  }

 /* Full-width input fields */
  /* Set a style for all buttons */
  button {
      background-color: #4CAF50;
      color: white;
      padding: 14px 20px;
      margin: 8px 0;
      border: none;
      cursor: pointer;
      width: 100%;
  }
  button:hover {
      opacity: 0.8;
  }
  /* Extra styles for the cancel button */
  .cancelbtn {
      width: auto;
      padding: 10px 18px;
      background-color: #f44336;
  }

  input[type=text]{
      width: 100%;
      padding: 12px 20px;
      margin: 8px 0;
      display: inline-block;
      border: 1px solid #ccc;
      box-sizing: border-box;
  }

  form input .invalid-field, textarea .invalid-field, option .invalid-field {
      border: 1px, solid, red;
      outline: 1px, solid, red;
  }

  form .has-invalid-field {
      color: white;
      background-color: lightgray;
      cursor: not-allowed;
  }

  form .invalid-field, .placeholder {
      /*background-color: red;*/
      border-color: red;
      color: red;
      font-weight: bold;
  }

/* NAVLINK default category for "active" (aka "selected") items
   NavLink will automatically use this class if a className is not provided
  .nav .active {
    color: blue;
  }
*/
  .orig {
    color: dimgrey;
  }
  .edited {
    color: black;
  }

  .post-body {
    white-space: pre-line;  /* or pre-wrap to preserve all whitespace*/
  }

  .comment {
  }

  .comment-author, .italic {
    font-style: italic;
  }

  .orig {
    color: dimgray;
  }
  .field-label-left {
    text-align: left;
    color: purple;        /* should === placeholder text color */ /*darkorange;*/
    font-size: smaller;
  }
  .field-label-centered {
    text-align: center;
    color: purple;        /* should === placeholder text color */ /*darkorange;*/
    font-size: smaller;
  }
  .edit-delete-comment-links {
    color: dimgrey;
  }
  .counts {
    color: black;
  }


/* TODO: test (logged in user's) votes on posts and comments,
  if user upvoted, make text darker
  if logged-in user downvoted, make text lighter.
  */

  .vote {
    display: inline-block;
  }

 /* Triangles for posts */
  .post-up-vote {
    width: 0;
    height: 0;
    margin: 6px;
    border-left:   25px solid transparent;
    border-right:  25px solid transparent;

    border-bottom: 25px solid green;
  }

  .post-down-vote {
    width: 0;
    height: 0;
    margin: 6px;
    border-left:  25px solid transparent;
    border-right: 25px solid transparent;

    border-top:   25px solid green;
  }

 /* "Hat" Arrows for comments */
  .comment-up-vote {
    width: 0;
    height: 0;
    margin: 6px;
    border-left:   8px solid transparent;
    border-right:  8px solid transparent;

    border-bottom: 8px solid green;
  }
  .comment-down-vote {
    width: 0;
    height: 0;
    margin: 6px;
    border-left:  8px solid transparent;
    border-right: 8px solid transparent;

    border-top:   8px solid green;
  }

  .centered {
    display: block;
    margin-left: auto;
    margin-right: auto;
  }


/* placeholder text */
  ::placeholder {
      /*color: rgb(255,165,0);*/
      color: purple;
      opacity: .7; /* Firefox */
  }
  :-ms-input-placeholder { /* Internet Explorer 10-11 */
      /*color: rgb(255,165,0);*/
      color: purple;
  }
  ::-ms-input-placeholder { /* Microsoft Edge */
      /*color: rgb(255,165,0);*/
      color: purple;
  }
  .invalid-field::placeholder {
      color: red;
      font-weight: bold;
      opacity: .7; /* Firefox */
  }
  .invalid-field:-ms-input-placeholder { /* Internet Explorer 10-11 */
      color: red;
      font-weight: bold;
  }
  .invalid-field::-ms-input-placeholder { /* Microsoft Edge */
     color: red;
     font-weight: bold;
  }

/* Comment styles  */
  /*   (post author, logged in user, everyone else) */
  /* TODO:
     post author, outline in a color
     everyone light background
     logged in user: icon on right
     everyone else: icon on left;
  */

  /* Chat containers */ /* (default = everyone else) */
  /* https://www.w3schools.com/howto/tryit.asp?filename=tryhow_css_chat */
  .comment-container {
      border: 2px solid #dedede;
      background-color: #f1f1f1;
      border-radius: 5px;
      padding: 10px;
      margin: 10px 0;
  }

  /* Darker chat container */ /* post author */
  .author-color {
      border-color: #ccc;
      background-color: #ddd;
  }

  /* Darker chat container */ /* logged in user */
  .user-loggedin-color {
      border-color: yellow;
      background-color: #ddd;
  }

  /* Clear floats */
  .container::after {
      content: "";
      clear: both;
      display: table;
  }

  /* Style images  -- replace this with some icon*/
  .container img {
      float: left;
      max-width: 60px;
      width: 100%;
      margin-right: 20px;
      border-radius: 50%;
  }
/* ... */

